hot fix to correct lock icon overlap in title
(also increased opacity)

cc @bbondy
cc @luixxiul

--- a/less/navigationBar.less
+++ b/less/navigationBar.less
@@ -778,7 +778,7 @@
 
     .urlbarIcon {
       display: inline-block;
-      opacity: 0.4;
+      opacity: 0.5;
       position: relative;
       left: 2px;
       min-width: 0;
@@ -871,7 +871,6 @@
 
     .urlbarIcon {
       color: @siteSecureColor;
-      left: 14px;
       margin-top: 1px;
       font-size: 13px;
       min-height: 10px;
